# discord-ticker

./: Cargo.toml  README.md
src/: main.rs
src/helpers/: mod.rs
