[package]
name = "ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.25.0"
shuttle-runtime = "0.25.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.25.0"
tokio = "1.26.0"
tracing = "0.1.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
reqwest = { version ="0.11.18", features = ["json"] }
num-format = "0.4.4"
